# MecanoTank

./: .gitmodules  platformio.ini
Pico/: ABDecoder.hpp  ABDecoderBlock.cpp  ABDecoderBlock.hpp  BL.cpp  BL.hpp  BL2.hpp  BL_ABDecoder.cpp  BL_ABDecoder.hpp  BL_Analog.cpp  BL_Analog.hpp  BL_BatteryMonitor.cpp  BL_BatteryMonitor.hpp  BL_CartToWheels.cpp  BL_CartToWheels.hpp  BL_Composite.cpp  BL_Composite.hpp  BL_Debug.hpp  BL_Differentiator.cpp  BL_Differentiator.hpp  BL_ErrorDifference.cpp  BL_ErrorDifference.hpp  BL_Integrator.hpp  BL_Leaf.cpp  BL_Leaf.hpp  BL_MotorInterface.cpp  BL_MotorInterface.hpp  BL_MultClip.cpp  BL_MultClip.hpp  BL_PID.cpp  BL_PID.hpp  BL_SPG.cpp  BL_SPG.hpp  BL_SignalGenerator.cpp  BL_SignalGenerator.hpp  BL_Sum.cpp  BL_Sum.hpp  BL_Sum4.hpp  BL_Trace.cpp  BL_Trace.hpp  BL_Tracer.cpp  (+67 more)
Pico/NewBlocks/: Block.cpp  Block.h  Blocks.cpp  CompositeBlock.cpp  CompositeBlock.h  CompositeTerminal.cpp  CompositeTerminal.h  DifferenceBlock.cpp  DifferenceBlock.h  IDTerminal.cpp  IDTerminal.h  Terminal.cpp  Terminal.h
src/: Block.cpp  Block.hpp  Controller.cpp  Controller.hpp  ControllerHW.cpp  ControllerHW.hpp  ControllerSW.cpp  ControllerSW.hpp  Debugpin.hpp  ErrorDifference.cpp  ErrorDifference.hpp  GainOffsetSensor.cpp  GainOffsetSensor.hpp  MeasurementSystem.cpp  MeasurementSystem.hpp  MotorInterface.cpp  MotorInterface.hpp  MotorSystem.cpp  MotorSystem.hpp  PID.cpp  PID.hpp  RawSensor.cpp  RawSensor.hpp  RedButton.cpp  SG_MeaSystem.cpp  SG_MeaSystem.hpp  SG_MotorIntegration.cpp  SG_MotorIntegration.hpp  SG_RawSensor.cpp  SG_RawSensor.hpp  SG_SingleMotorInterface.cpp  Sequencer.cpp  Sequencer.hpp  SequencerHW.cpp  SequencerSW.cpp  (+9 more)
(+22 files in other folders)
